--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     <script src="https://use.fontawesome.com/bd8d2b644e.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="https://www.w3schools.com/lib/w3color.js"></script>
-    <script src="https://apis.google.com/js/api.js"></script>
-    <script src="js/sketch.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
     <script src="js/script.js"></script>
 </body>
 
