--- a/pixi.html
+++ b/pixi.html
@@ -40,12 +40,20 @@
             padding: 1em 4em;
             font-size: 1vw;
         }
+
+        .result {
+            margin: 2em 4em;
+            border: 1px solid white;
+            height: 4vw;
+            width: auto;
+        }
     </style>
 </head>
 
 <body>
     <canvas id="myCanvas"></canvas>
     <button class="saveIt">Save It</button>
+    <img class="result" src="" alt="resulting image">
 </body>
 <script src="https://apis.google.com/js/api.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -95,53 +103,6 @@
         }, 3000);
     });
     var i = 1;
-    $('.saveIt').click(function () {
-
-        var c = document.getElementById('myCanvas');
-        var url = c.toDataURL("image/png").replace("image/png", "image/base64");
-        var d = new Date();
-        var index = guid();
-        var storageRef = firebase.storage().ref('blends/pic ' + index + ".jpg");
-       
-        //upload file
-        var uploadTask = storageRef.putString(url, 'data_url');
-
-        //handling callbacks
-        uploadTask.on('state_changed', function (snapshot) {
-            // Observe state change events such as progress, pause, and resume
-            // Get task progress, including the number of bytes uploaded and the total number of bytes to be uploaded
-            var progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-            console.log('Upload is ' + progress + '% done');
-            switch (snapshot.state) {
-                case firebase.storage.TaskState.PAUSED: // or 'paused'
-                    console.log('Upload is paused');
-                    break;
-                case firebase.storage.TaskState.RUNNING: // or 'running'
-                    console.log('Upload is running');
-                    break;
-            }
-        }, function (error) {
-            // Handle unsuccessful uploads
-            console.log(error);
-        }, function () {
-            // Handle successful uploads on complete
-            // For instance, get the download URL: https://firebasestorage.googleapis.com/...
-            uri = uploadTask.snapshot.downloadURL;
-            var d = new Date();
-
-            var imgData = {
-                name: 'blend',
-                create_date: d,
-                img_uri: uri
-            }
-
-            var newPostKey = firebase.database().ref().child('blends/').push().key;
-            var updates = {};
-            updates['/blends/' + newPostKey] = imgData;
-            firebase.database().ref().update(updates);
-        });
-        location.href = "index.html/#gallery"
-    });
 
     function startPixi() {
         console.clear();
@@ -152,7 +113,8 @@
         var app = new PIXI.Application(width, height, {
             autoStart: false,
             backgroundColor: 0x000000,
-            view: myCanvas
+            view: myCanvas,
+            preserveDrawingBuffer: true
         });
 
         var rt = [];
@@ -219,6 +181,57 @@
             dragging = false;
         }
     }
+
+    $('.saveIt').click(function () {
+
+        var c = document.getElementById("myCanvas");
+        var url = c.toDataURL("image/png").replace("image/png", "image/base64");
+        //console.log(url);
+        $('.result').attr('src', url);
+
+        var d = new Date();
+        var index = guid();
+        var storageRef = firebase.storage().ref('blends/pic ' + index + ".jpg");
+
+        //upload file
+        var uploadTask = storageRef.putString(url, 'data_url');
+
+        //handling callbacks
+        uploadTask.on('state_changed', function (snapshot) {
+            // Observe state change events such as progress, pause, and resume
+            // Get task progress, including the number of bytes uploaded and the total number of bytes to be uploaded
+            var progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+            console.log('Upload is ' + progress + '% done');
+            switch (snapshot.state) {
+                case firebase.storage.TaskState.PAUSED: // or 'paused'
+                    console.log('Upload is paused');
+                    break;
+                case firebase.storage.TaskState.RUNNING: // or 'running'
+                    console.log('Upload is running');
+                    break;
+            }
+        }, function (error) {
+            // Handle unsuccessful uploads
+            console.log(error);
+        }, function () {
+            // Handle successful uploads on complete
+            // For instance, get the download URL: https://firebasestorage.googleapis.com/...
+            uri = uploadTask.snapshot.downloadURL;
+            var d = new Date();
+
+            var imgData = {
+                name: 'blend',
+                create_date: d,
+                img_uri: uri
+            }
+
+            var newPostKey = firebase.database().ref().child('blends/').push().key;
+            var updates = {};
+            updates['/blends/' + newPostKey] = imgData;
+            firebase.database().ref().update(updates);
+        });
+        //location.href = "index.html"
+    });
 </script>
 
 </html>
